Fixing up code in dark mode

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,7 +1,10 @@
 @import "tailwindcss";
 
-@import "highlight.js/styles/github-dark.css";
-@import "highlight.js/styles/github";
+@import "highlight.js/styles/github.css";
+
+.dark {
+	@import "highlight.js/styles/atom-one-dark.css";
+}
 
 @import "./styles/Headings.css";
 @import "./styles/Scrollbar.css";
